# MCMCAPSUHacks2025

./: .gitignore  README.md  blue-map-36023442.out  blue-map-36024496.out  fair-map-36023440.out  fair-map-36024494.out  incumbent-map-36023443.out  incumbent-map-36024497.out  pyproject.toml  red-map-36023441.out  red-map-36024495.out
DataProcessing/: censusMerger.py  shapefileProcessor.py
Redistricting/: __init__.py  cohesion-test-36032604.out  conhesion.py  gerrymander-scenarios-36023604.out  gerrymanderingSimulator.py  gerrymanderingSimulatorOld.py  main.py  run_cohesion.py  scanarios_config.json  scanarios_config2.json  setup.py  visualization.py
env/: requirements.txt
example/: gage_example.ipynb
example/data/: jrb.gpkg  pa_election_data.npy
example/data/Region_02_nhru_simplify_100/: Region_02_nhru_simplify_100.dbf  Region_02_nhru_simplify_100.sbn  Region_02_nhru_simplify_100.sbx  Region_02_nhru_simplify_100.shp  Region_02_nhru_simplify_100.shp.xml  Region_02_nhru_simplify_100.shx
example/output/: starting_gage_map.html
src/SpatialForge/core/data/: census_merger.py  geojson_processor.py
src/SpatialForge/core/post/: local_minium_bullseyes.py  plot.py  target_animation.py  visualization.py
src/SpatialForge/core/utils/: utils.py
src/SpatialForge/geoloc/: geoloc_markov_anneal.py  main.py
src/SpatialForge/redistrict/: Red.sh  Scenarios.sh  __init__.py  animationCapabilities.py  animation_capabilities.py  cohesion.json  gerrymander-scenarios-36023434.out  gerrymanderingSimulatorGPU.py  gerrymandering_simulator.py  main.py  runSimulation.py  run_batch_scenarios.py  run_imulation.py
